# KANwise

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
data/: data_discovery.py  data_generation.py  function_discovery_data.csv  heat_equation_data.csv  synthetic_data.csv
docs/source/: api.rst  conf.py  index.rst
examples/: california_housing.py  mnist.py  simple_regression.py
kanwise/: __init__.py  config.py  kan.py  layers.py  models.py  utils.py
tests/: test_layers.py  test_models.py
